--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ li a:hover {
     background-size: cover;
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: right;
     margin: 5px;
 }
 .question {
@@ -152,7 +152,6 @@ form {
     text-align: center;
     margin: 20px auto;
 }
-   
 textarea {
     border: 0; 
     outline: 0;
@@ -161,16 +160,12 @@ textarea {
     width: 100%;
     margin-top: 1em;
     font-family: 'Merriweather', sans-serif;
+    height: 150px;
 }
-  
 #input-submit {
     color: white; 
     background: #f00;
     cursor: pointer;
-}
-   
-textarea {
-    height: 150px;
 }
 .icon {
     display: flex;
@@ -178,11 +173,6 @@ textarea {
     align-items: center;
     justify-content: center;
 }
-/* .bt {
-    border-radius: 30%;
-    padding: 1px;
-    margin: 5px;
-} */
 .link {
     max-width: 30px;
     min-height: 30px;
