--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ textarea {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .link {
     max-width: 30px;
